# zk-THRONE

./: .env.example  .gitignore  ANSWER_VALIDATION_FIX.md  ANSWER_VALIDATION_SYSTEM.md  BACKEND_ARCHITECTURE.md  COMPLETE_FIX_SUMMARY.md  Cargo.toml  DEPLOYMENT.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_SUCCESS.md  FRONTEND_STATUS.md  GAME_README.md  MULTIPLAYER_INTEGRATION_ISSUES.md  MULTIPLAYER_ZK_COMPLETE.md  QUESTION_VARIETY_UPDATE.md  QUICK_REFERENCE.md  QUICK_START.md  README.md  README_ZK_SOROBAN.md  SECURITY_ANALYSIS.md  STATUS_WORKING.md  SUBMISSION_CHECKLIST.md  SYSTEM_STATUS.md  TILLNOW.md  TRIALS_BACKEND_INTEGRATION_COMPLETE.md  TRIAL_SUBMISSION_PROBLEM.md  WORK_FROM_HERE.md  ZK_SETUP_COMPLETE.md  initialize-contract.ps1  initialize-contract.sh  package-lock.json  package.json
backend/: DEPLOYMENT_GUIDE.md  NOIR_QUICK_START.md  README.md
backend/zk-server/: .env.example  .env.production  .railway.yaml  Cargo.toml  MULTIPLAYER_ARCHITECTURE.md  config.js  generate-keys.js  get-raw-key.js  index.js  nonces.json  package-lock.json  package.json  test-proof.sh  tsconfig.json
backend/zk-server/config/: questionSets.js  trials.js
backend/zk-server/routes/: room.js  submitSolution.js
backend/zk-server/services/: attestationService.js  contractService.js  nonceService.js  proofService.js  roomService.js  verifyService.js
backend/zk-server/src/: index.ts  main.rs
backend/zk-throne/methods/guest/: Cargo.toml
backend/zk-throne/methods/guest/src/: main.rs
docs/: index.html
frontend/: .env.production  INTEGRATION_GUIDE.md  MIGRATION_CHECKLIST.md  MIGRATION_GUIDE.md  MULTIPLAYER_INTEGRATION.tsx  README.md  contract_template.rs  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.app.tsbuildinfo  vercel.json  vite.config.ts
scripts/: initialize-contract.ts  setup-zk.ts
(+67 files in other folders)
