[package]
name = "zk-server"
version = "0.1.0"
edition = "2021"

[dependencies]
zk-throne = { path = "../zk-throne" }
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { workspace = true }
serde_json = { workspace = true }
tower-http = { version = "0.5", features = ["cors"] }
hex = { workspace = true }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"

[profile.release]
opt-level = 3
